[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mihirkit"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "python-dotenv"
]

[project.urls]
Homepage = ""

[tools.setuptools]
include-package-data = true

[tools.setuptools.dynamic]
version = {attr = "mihirkit.__version__"}

[tools.setuptools.packages]
find = {}
