[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mihirkit"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "python-dotenv",
    "sqlalchemy"
]

[project.urls]
Homepage = "https://github.com/mihirmodak/mihirkit"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
